--- a/index.html
+++ b/index.html
@@ -158,6 +158,14 @@
                 </div>
                 <div class="cards flex"></div>
             </div>
+            <div class="trending-songs Playlists">
+                <div class="trending flex space-between">
+                    <h1 class="underline white cursor-pointer">Popular Playlists</h1>
+                    <div class="show-btn underline light-color dx-small bold bold align-self cursor-pointer">Show
+                        all</div>
+                </div>
+                <div class="cards flex"></div>
+            </div>
             <div class="playbar flex align-items hide">
                 <div class="seekbar cursor-pointer">
                     <div class="circle"></div>
